fix combobox picklist options overflow out of viewport and potentially issue #3 during QA, CUSTOM FIELDS FOR TARGET OBJECT NOT APPEARING ON FIELD MAPPING PICKLIST

--- a/src/aura/BDI_ManageAdvancedMapping/BDI_ManageAdvancedMapping.css
+++ b/src/aura/BDI_ManageAdvancedMapping/BDI_ManageAdvancedMapping.css
@@ -9,3 +9,7 @@
 .THIS.slds-grid_extension .slds-size_1-of-1 {
     height: 100%;
 }
+
+.THIS.slds-grid_extension .slds-listbox_extension .slds-form-element__control .slds-combobox_container .slds-combobox .slds-listbox {
+    max-height: 300px;
+}
